# power-ops-sdk

./: .codespellrc  .env.tmpl  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamlfmt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESYNC.md  SETUP.md  Untitled.ipynb  cdf.toml  defs.py  mkdocs.yml  power_ops_config.yaml  pyproject.toml  settings.toml  shop_results.ipynb  trigger_shop_run.ipynb
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  release.yml  resync-apply.yaml  resync-plan.yaml  sdk-build.yml  sdk-release.yml  toolkit-build.yaml  toolkit-deploy.yaml  toolkit-release.yml  toolkit-sandbox.yaml  toolkit-staging.yaml
cognite/powerops/: __init__.py  _cli.py  _models.py  _run.py  _version.py  bootstrap.py  cdf_labels.py  cli.py  config.dev.yaml  config.heco-dev.yaml  config.lyse-dev.yaml  config.py  config.staging.yaml  logger.py  main.py
cognite/powerops/bootstrap/: __init__.py  _main.py  _settings.py  bootstrap.py  config.py
cognite/powerops/case/: __init__.py  case.py  shop_run_event.py
cognite/powerops/client/: __init__.py  _day_ahead_bids_hooks.py  _day_ahead_frontend_contract_hooks.py  _dm_client_base.py  _logger.py  asset_apis.py  case_client.py  commands_client.py  config_client.py  data_classes.py  data_set_api.py  day_ahead_frontend_contract_api.py  dm_apis.py  mapping_client.py  powerops_client.py  scenario_client.py  shop_api.py  shop_result_files.py  shop_results.py  shop_results_compare.py  shop_run.py  shop_run_compare.py  transformation_client.py  watercourse_api.py  watercourse_client.py
cognite/powerops/clients/: __init__.py  _api_client.py  config_client.py  data_set_api.py  powerops_client.py
cognite/powerops/cogshop1/: __init__.py  _api_client.py
cognite/powerops/data_classes/: asset_lists.py  benchmarking_config.py  bid_matrix_generator_config.py  cdf_resource_collection.py  common.py  core.py  generator.py  generators.py  market_config.py  plant.py  price_area.py  reserve_scenario.py  reservoir.py  reservoirs.py  rkom_bid_combination_config.py  rkom_market_config.py  shop_file_config.py  (+3 more)
docs/: index.md  installation.md  reference.md
docs/notebooks/: shop_results.ipynb
docs/quickstart/: data_engineer.md  data_scientist.ipynb
docs/tutorials/: advanced_cogshop_run.ipynb  case_usage.ipynb  fetch_old_results.ipynb  quickstart_cogshop_run.ipynb  shop_results.ipynb  trigger_cogshop_run.ipynb  trigger_dayahead.ipynb  trigger_shop_run.ipynb
examples/: case_usage.py  fetch_old_results.py  run_results.py  setup_client.py  shop_results.ipynb  trigger_shop_run.py  usage.py
interface_frontend/: default.packages.yaml  local.yaml  packages.yaml
interface_frontend/local_modules/: README.md
resync/: configuration.yaml
resync/benchmarking/: benchmarking_configuration_day_ahead.yaml  benchmarking_production_obligation_day_ahead.yaml  shop_model_with_assets.yaml
resync/fornebu/: data_model_configuration.yaml  generator.yaml  plant_information.yaml  shop_attribute_mapping.yaml  shop_based_partial_bid_configuration.yaml  shop_model.yaml  shop_scenario.yaml  shop_scenario_set.yaml  water_value_based_partial_bid_configuration.yaml
resync/shared/: bid_configuration_day_ahead.yaml  data_set_configuration.yaml  date_specification.yaml  price_area_information.yaml  shop_attribute_mapping.yaml  shop_commands.yaml  shop_output_time_series_definition.yaml  shop_time_resolution.yaml
resync/stavanger/: data_model_configuration.yaml  generator.yaml  plant_information.yaml  shop_attribute_mapping.yaml  shop_based_partial_bid_configuration.yaml  shop_model.yaml  shop_scenario.yaml  shop_scenario_set.yaml  water_value_based_partial_bid_configuration.yaml
scripts/: add_props_to_partialbidmatrix.py  add_ts_data_bidmatrixinfo.py  add_ts_to_bidmatrix.py  benchmarking_test_data.ipynb  change_dataset.py  clean_model.py  clean_model_resources.py  clean_models.py  clean_relationships_without_targets.py  create_capacity_bid_model.py  create_day_ahead_frontend_contract_model.py  create_frontend_interface_model.py  create_multi_scenario_bid_processes.py  deploy_data_models.py  diff_production_model.py  generate_cogshop1_client.py  generate_data_model_clients.py  generate_test_data.py  hack_to_add_is_default_config_for_price_area.py  mapping.ipynb  populate_data_models.py  populate_time_series.py  pygen_generate_clients.py  run_apply.py  scenario_0.ipynb  transformationsv2_config_translations.py  update_gh_env_secrets.py  update_old_shop_run_events.py  upgrade_sdk_customers.py  write_read_instances.py
scripts/backup/: power-ops-afrr-bids-AFRRBids-v1.graphql  power-ops-afrr-bigging-proto-aFRR-0.1.graphql  power-ops-day-ahead-bids-v2-DayAheadBids-1.graphql  power-ops-day-ahead-bids_DayAheadBids-v1.graphql  production.graphql
tests/: conftest.py  constants.py  placeholder_test.py  test_build.py  utils.py
tests/test_bootstrap/: Glomma_base_mapping.csv  Lågen_base_mapping.csv  OE_base_mapping.csv  Otta_base_mapping.csv  test_bootstrap_resource_difference.py  test_common.py  test_generate_resources.py  test_plant_to_reservoir_bfs.py  test_reserve_scenario.py  test_shop_time_series_config.py  test_time_series_mapping.py
tests/test_case/: test_case_loading.py
tests/test_dataclasses/: test_rkom_process_config.py
tests/test_integration/: conftest.py
tests/test_preprocessor/: conftest.py  test_cog_shop_file.py  test_transformation_functions.py  test_utils.py
tests/test_settings/: test_getters.py  test_settings.py
tests/test_unit/: conftest.py  test_build.py
tests/test_utils/: test_dotget.py
toolkit/: CONTRIBUTING.md  cdf.toml  config.dev.yaml  config.heco-dev.yaml  config.heco-prod.yaml  config.hydro-pilot.yaml  config.lyse-dev.yaml  config.lyse-prod.yaml  config.oe-dev.yaml  config.oe-prod.yaml  config.sandbox.yaml  config.staging.yaml  config.statkraft-pilot.yaml
tutorials/: advanced_cogshop_run.ipynb  quickstart_cogshop_run.ipynb
tutorials/example_case_files/: a_example_stavanger_with_commands.yaml
(+3124 files in other folders)
