[tool.poetry]
name = "cognite-power-ops"
version = "0.75.1"
description = "SDK for power markets operations on Cognite Data Fusion"
readme = "README.md"
authors = ["Cognite <support@cognite.com>"]
license = "Apache 2.0"
documentation = "https://cognite-power-ops-sdk.readthedocs-hosted.com/en/latest/"
homepage = "https://cognite-power-ops-sdk.readthedocs-hosted.com/en/latest/"
repository = "https://github.com/cognitedata/power-ops-sdk"
packages = [{include = "cognite", from = "."}]

[tool.black]
line-length = 120
target_version = ['py39']
include = '\.py$'

[tool.ruff.isort]
known-third-party = ["cognite.client"]

[tool.ruff]
# See https://beta.ruff.rs/docs/rules for an overview of ruff rules
line-length = 120
target-version = "py39"
exclude = ["examples", "scripts", "cognite/powerops/client/_generated"]
select = ["E","W","F","I","RUF","TID","UP", "B", "FLY", "PTH", "ERA"]
fixable = ["E","W","F","I","RUF","TID","UP", "B", "FLY", "PTH", "ERA"]
fix = true
ignore = [
    # This is causing issues for pydantic which does not support use of X | Y for type annotations before 3.10
    "UP007", # Use X | Y for type annotations
    # Typer do function calls when setting up the CLI.
    "B008", # Do not perform function call {name} in argument defaults,
    "RUF012", # Insistance on using ClassVar to mark class variables
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused import

[tool.mypy]
explicit_package_bases = true
exclude = [
    # The plan is to gradually add mypy to the code base. As of 18. Juli 2023,
    # the following packages are not type checked:
    "^cognite/powerops/client/",
    "^cognite/powerops/resync/config/",
    "^cognite/powerops/resync/models/",
]
allow_redefinition = true


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = {version="^0.9.0", extras=["rich"]}
PyYAML = "^6.0"
cognite-sdk = {version = ">=7.3,<8", extras = ["pandas"]}
pydantic = "^2.0"
pydantic-settings = "^2.0"
cachelib = "^0.10.2"
loguru = "^0.7.0"
deepdiff = "^6.3.0"
matplotlib = "^3.7.1"
dacite = "^1.8.1"
python-dotenv = "^1.0.0"
arrow = "^1.2.0"
typing_extensions = ">= 4"
tomli = {version = "^2.0.1", python = "<3.11"}
StrEnum = {version = "^0.4.15", python = "<3.11"}
tomli-w = "^1.0.0"
tabulate = "^0.9"


mkdocs =  {version="*", optional=true}
mkdocs-jupyter = {version="*", optional=true}
mkdocs-material = {version="*", optional=true}
mkdocs-material-extensions = {version="*", optional=true}
mkdocs-git-revision-date-localized-plugin = {version="*", optional=true}
mkdocs-git-authors-plugin = {version="*", optional=true}
mkdocs-gitbook = {version="*", optional=true}
mkdocs-glightbox = {version="*", optional=true}
pymdown-extensions = {version="*", optional=true}
mkdocstrings = {version="*", optional=true, extras=["python"]}
cognite-toolkit = "^0.1.0a2"
cognite-pygen = {version = ">=0.32.0", extras = ["all"]}

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-jupyter", "mkdocs-material", "mkdocs-material-extensions", "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin", "mkdocs-gitbook", "mkdocs-glightbox", "pymdown-extensions", "mkdocstrings"]

[tool.poetry.scripts]
powerops = "cognite.powerops.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
profilehooks = "^1.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-regressions = "^2.4.2"
ipykernel="6.24.0"
twine = "^4.0.2"
jupyter = "^1.0.0"
mypy = "^1.4"
pandas-stubs = "^2"
types-PyYAML = "^6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=customers/ --ignore=examples/ --ignore=playground/ --ignore=cognite/powerops/client"
testpaths = [
    "tests",
    "cognite",
]
log_cli = true
